--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.0.5",
     "@angular/router": "~9.0.5",
     "rxjs": "~6.5.4",
+    "signature_pad": "^3.0.0-beta.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
